# cppbase

./: .gitignore  CMakeLists.txt  README.md  env_setup.sh  xmake.lua
.github/workflows/: README.md  unittest.yaml
example/: CMakeLists.txt  README.md  app.cpp  xmake.lua
include/cppbase/: add.hpp
src/: add.cpp
test/: CMakeLists.txt  README.md  add_test.cpp
